@@ -1,5 +1,6 @@
 Gapstare's changes to v1.01
 
+* Adding Commodore BASIC '?' as alias for PRINT. 
 * Replaced SYSTEM command with QUIT.
 * Added #include <stdlib.h> to basic.c to suppress a compiler warning.
 * Changed program output so that it sounds better grammatically (to me).
